# ESEP-2023SoSe-Team-2-1

./: .gitignore  .project  Doxyfile  README.md
EventMgr/: CMakeLists.txt  Logger.cpp  Logger.h  Watchdog.cpp  Watchdog.h  eventmanager.cpp  eventmanager.h  main.cpp  msg_enum.h  msg_estring_def.h  msg_string_table.h
MasterSlaveConfig/Client/: .gitignore  CMakeLists.txt
MasterSlaveConfig/Client/main/: .cproject  Makefile
MasterSlaveConfig/Client/main/simulation/: README.md
MasterSlaveConfig/Client/main/simulation/doc/: System-Twin.md
MasterSlaveConfig/Client/main/simulation/src/example/: festo-simulation.cpp
MasterSlaveConfig/Client/main/simulation/src/simulationcore/: isimdrophandler.h  isimulationimage.h  simconf.cpp  simconveyorbelt.h  simctrlhandler.cpp  simhci.cpp  simitemhandlingaction.h  simjsonbase.h  simjsonmessagehandler.cpp  simlightbarrier.cpp  simmagneticsensor.cpp  simsensors.cpp  simslide.cpp
MasterSlaveConfig/Client/main/simulation/src/simulationudpqnx/: UDPConfiguration.cpp  UDPReceiverThreadSimItemHandling.cpp
MasterSlaveConfig/Client/main/simulation/utils/autofeeder/: ReadMe.md
MasterSlaveConfig/Client/main/simulation/utils/status/: showsimstatus.md
MasterSlaveConfig/Client/main/src/: main.cpp
MasterSlaveConfig/Client/main/src/eventmanager/: eventmanager.cpp  eventmanager.h
MasterSlaveConfig/Client/main/src/events/: eventtypes_stringlist.h
MasterSlaveConfig/Client/main/src/hal/adc/: ADC.h  tscadc_hw.h
MasterSlaveConfig/Server/: CMakeLists.txt  (+1 more)
docs/: Manual.docx  README.md  container.puml
gns/: .cproject  .project  Makefile
helloworld/: .cproject  Makefile
main/: .clang-format  .cproject  Makefile
tests/: .cproject  .project  Makefile
(+1173 files in other folders)
